syntax = "proto3";

package gmx;

message PositionIncreases {
    repeated PositionIncrease positionIncreases = 1;
}

message PositionIncrease {
    string eventName = 1;
    string trx = 2;
    string account = 3;
    string market = 4;
    double executionPrice = 5;
    double sizeUsd = 6;
    double sizeTokens = 7;
    double collateralAmount = 8;
    bool isLong = 9;
    double leverage = 10;
    int32 orderType = 11;
    string orderKey = 12;
    string positionKey = 13;
    string timestamp = 14;
    uint64 blockNumber = 15;
}
